--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                 radial-gradient(at 100% 100%, rgba(229, 192, 123, 0.1) 0px, transparent 50%),
                 radial-gradient(at 0% 100%, rgba(0, 35, 71, 0.2) 0px, transparent 50%);
             background-attachment: fixed;
-    overflow-x: hidden;
-    width: 100%;
+            overflow-x: hidden;
         }
 
         ::-webkit-scrollbar {
@@ -213,7 +212,7 @@
         }
 
         nav ul li a:hover {
-            #ffcc00
+            color: #ffcc00;
         }
 
         /* Style Dasar Dropdown */
@@ -669,6 +668,29 @@
             opacity: 0.9;
         }
 
+        /* Ensure hero content is centered both horizontally and vertically */
+        .hero-content {
+            text-align: center;
+            width: 100%;
+            max-width: 980px;
+            margin: 0 auto;
+            padding: 0 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .hero-content .subtitle {
+            display: block;
+            width: 100%;
+            text-align: center;
+            color: rgba(255,255,255,0.9);
+            margin-bottom: 10px;
+        }
+
+        .hero-content h1 { text-align: center; }
+
         /* Memberi jarak ekstra pada area tombol */
         .hero-btns {
             margin-top: 30px;
@@ -690,12 +712,12 @@
             border-radius: 20px 20px 0 0;
         }
 
-       .stats-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); /* Kolom akan turun otomatis di HP */
-    text-align: center;
-    gap: 15px;
-}
+        .stats-grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            text-align: center;
+        }
+
         .stat-item h2 {
             font-size: 2.5rem;
             color: var(--accent);
@@ -845,25 +867,67 @@
             margin-bottom: 20px;
         }
 
-       @media (max-width: 992px) {
-    nav ul {
-        display: none; /* Sembunyikan menu asli */
+        @media (max-width: 768px) {
+    /* Menghilangkan menu asli agar tidak berantakan */
+    .navbar-menu { 
+        display: none; 
         flex-direction: column;
         position: absolute;
-        top: 70px;
+        top: 60px; /* Sesuaikan dengan tinggi navbar Anda */
         left: 0;
         width: 100%;
-        background: white;
+        background-color: #001f3f; /* Warna navy sekolah Anda */
         padding: 20px;
-        box-shadow: 0 10px 10px rgba(0,0,0,0.1);
+        z-index: 1000;
     }
-    nav ul.active {
-        display: flex; /* Munculkan saat tombol diklik */
+
+    /* Munculkan menu saat class 'active' dipicu */
+    .navbar-menu.active {
+        display: flex;
     }
+
+    /* Gaya tombol garis tiga (Hamburger) */
     .menu-toggle {
-        display: flex !important;
+        display: block;
+        cursor: pointer;
+        background: none;
+        border: none;
+    }
+    
+    .menu-toggle span {
+        display: block;
+        width: 25px;
+        height: 3px;
+        background-color: #d4af37; /* Warna emas sekolah Anda */
+        margin: 5px auto;
     }
 }
+
+        /* Responsive fixes */
+        body { overflow-x: hidden; }
+        img { max-width: 100%; height: auto; display: inline-block; vertical-align: middle; }
+        /* Ensure specific UI images stay centered */
+        .kartu-staf img,
+        .berita-item img,
+        .img-fasilitas,
+        .card img,
+        .btn-wa-langsung img {
+            display: inline-block;
+            margin: 0 auto;
+            vertical-align: middle;
+        }
+        .img-logo { max-height: 60px; height: auto; }
+        .navbar-menu { display: flex; gap: 18px; align-items: center; list-style: none; }
+        .navbar-menu li { margin: 0; }
+        .menu-toggle { display: none; background: none; border: none; }
+
+        @media (max-width: 768px) {
+            .menu-toggle { display: block; }
+            nav ul.navbar-menu { display: none; }
+            nav ul.navbar-menu.active { display: flex; flex-direction: column; position: absolute; top: 60px; left: 0; width: 100%; background: rgba(0,31,63,0.98); padding: 20px; z-index:1000; }
+            .hero h1 { font-size: 2rem; }
+            .hero { background-attachment: scroll; }
+        }
 
     </style>
 
@@ -884,7 +948,7 @@
     <span></span>
 </button>
             </div>
-            <ul>
+            <ul class="navbar-menu">
                 <li class="dropdown">
                     <a href="#profil" class="dropbtn">Profil &#9662;</a>
                     <div class="dropdown-content">
@@ -1189,10 +1253,8 @@
                     <div class="map-responsive">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3594.6463568312324!2d95.92155887447521!3d5.384387935352584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3040ed3e6d18c411%3A0xdfce280bedf4bb9f!2sSMAN%20Unggul%20Sigli%2C%20Kec.%20Pidie%2C%20Kabupaten%20Pidie%2C%20Aceh%2024151!5e1!3m2!1sid!2sid!4v1766572084332!5m2!1sid!2sid"
-                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>"
-                        width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy">
-                        </iframe>
+                            width="100%" height="100%" style="border:0;" allowfullscreen loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
 
@@ -1219,13 +1281,12 @@
 
 <script>
     const menuToggle = document.getElementById('menu-toggle');
-    const navLinks = document.querySelector('nav ul'); // Mengambil list menu Anda
+    const navMenu = document.querySelector('.navbar-menu'); // Pastikan class ini sesuai dengan nama class menu Anda
 
     menuToggle.addEventListener('click', () => {
-        navLinks.classList.toggle('active');
+        navMenu.classList.toggle('active');
     });
 </script>
-
 </body>
 
 </html>
