--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="img/logoo smanus.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/logo smanus.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/logo smanus.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/logo smanus.png">
+    <link rel="icon" type="image/png" href="img/logoo smanus.png smanus.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/logoo smanus.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/logoo smanus.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/logoo smanus.png">
     <title>SMA Negeri Unggul Sigli Swiss - Website Resmi</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -355,7 +355,7 @@
         /* Hero Section */
         .hero {
             background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-                url('tes1.jpg');
+                url('img/taman smanus.jpg');
             /* Ganti dengan nama file Anda */
             height: 600px;
             background-size: cover;
@@ -602,7 +602,7 @@
 
         .hero {
             height: 80vh;
-            background: linear-gradient(rgba(0, 51, 102, 0.7), rgba(0, 51, 102, 0.7)), url('tes1.jpg');
+            background: linear-gradient(rgba(0, 51, 102, 0.7), rgba(0, 51, 102, 0.7)), url('img/taman smanus.jpg');
             background-attachment: fixed;
             /* Ini efek parallax */
             background-size: cover;
@@ -621,7 +621,7 @@
 
         .hero-premium {
             height: 100vh;
-            background: linear-gradient(rgba(0, 35, 71, 0.8), rgba(0, 35, 71, 0.8)), url('img/tes1.jpg');
+            background: linear-gradient(rgba(0, 35, 71, 0.8), rgba(0, 35, 71, 0.8)), url('img/taman smanus.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -1036,35 +1036,6 @@
     .whatsapp-btn span { display: none; } /* Hanya icon di HP agar tidak sempit */
     .whatsapp-btn { padding: 15px; border-radius: 50%; }
     .quick-access { bottom: 20px; right: 20px; }
-}
-
-/* --- CSS UNTUK LIGHT MODE --- */
-body.light-mode {
-    background-color: #ffffff !important;
-    background-image: none !important;
-    color: #1a1a1a !important;
-}
-
-body.light-mode section, 
-body.light-mode .container,
-body.light-mode .card, 
-body.light-mode .bento-item {
-    background-color: #f0f0f0 !important;
-    color: #1a1a1a !important;
-}
-
-body.light-mode h1, 
-body.light-mode h2, 
-body.light-mode h3, 
-body.light-mode p {
-    color: #1a1a1a !important;
-}
-
-/* Tombol Floating saat Light Mode */
-body.light-mode .floating-btn {
-    background-color: #eee !important;
-    color: #333 !important;
-    border: 1px solid #ccc;
 }
 
     </style>
