--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
         /* Hero Section */
         .hero {
             background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-                url('img/tes1.jpg');
+                url('img/taman.jpg');
             /* Ganti dengan nama file Anda */
             height: 600px;
             background-size: cover;
@@ -1041,8 +1041,6 @@
     </style>
 
 </head>
-
-        </style>
 
         <style>
             /* Make all section H2 headings match the #profil heading size */
